// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with Comic Relief links 1`] = `
.c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: block;
  position: relative;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c2:hover,
.c2:focus {
  opacity: 0.6;
}

.c3 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin: 0 auto 0 0;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 32px;
  margin-right: 1.5rem;
}

@media (min-width:740px) {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: start;
    -ms-flex-pack: start;
    justify-content: start;
    margin: 0 auto 0 0;
  }
}

@media (min-width:740px) {
  .c1 {
    width: 48px;
  }
}

<ul
  className="c0"
>
  <li
    className="c1"
  >
    <a
      className="c2"
      data-test="icon-facebook"
      href="https://www.facebook.com/comicrelief"
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our Facebook page"
    >
      <img
        alt="facebook"
        className="c3"
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
  >
    <a
      className="c2"
      data-test="icon-instagram"
      href="https://www.instagram.com/comicrelief"
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our Instagram account"
    >
      <img
        alt="instagram"
        className="c3"
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
  >
    <a
      className="c2"
      data-test="icon-twitter"
      href="https://twitter.com/comicrelief"
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our Twitter account"
    >
      <img
        alt="twitter"
        className="c3"
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
  >
    <a
      className="c2"
      data-test="icon-youtube"
      href="https://www.youtube.com/channel/UCdF5u0ggeSETozc8fsprjcw"
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our YouTube channel"
    >
      <img
        alt="youtube"
        className="c3"
        src="mock.asset"
      />
    </a>
  </li>
</ul>
`;

exports[`renders correctly with Red Nose Day links and self target 1`] = `
.c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: block;
  position: relative;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c2:hover,
.c2:focus {
  opacity: 0.6;
}

.c3 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin: 0 auto 0 0;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 32px;
  margin-right: 1.5rem;
}

@media (min-width:740px) {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: start;
    -ms-flex-pack: start;
    justify-content: start;
    margin: 0 auto 0 0;
  }
}

@media (min-width:740px) {
  .c1 {
    width: 48px;
  }
}

<ul
  className="c0"
>
  <li
    className="c1"
  >
    <a
      className="c2"
      data-test="icon-facebook"
      href="https://www.facebook.com/rednoseday"
      rel="noopener noreferrer"
      target="_self"
      title="Check out our Facebook page"
    >
      <img
        alt="facebook"
        className="c3"
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
  >
    <a
      className="c2"
      data-test="icon-instagram"
      href="https://www.instagram.com/rednoseday"
      rel="noopener noreferrer"
      target="_self"
      title="Check out our Instagram account"
    >
      <img
        alt="instagram"
        className="c3"
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
  >
    <a
      className="c2"
      data-test="icon-twitter"
      href="https://twitter.com/rednoseday"
      rel="noopener noreferrer"
      target="_self"
      title="Check out our Twitter account"
    >
      <img
        alt="twitter"
        className="c3"
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
  >
    <a
      className="c2"
      data-test="icon-youtube"
      href="https://www.youtube.com/channel/UCdF5u0ggeSETozc8fsprjcw"
      rel="noopener noreferrer"
      target="_self"
      title="Check out our YouTube channel"
    >
      <img
        alt="youtube"
        className="c3"
        src="mock.asset"
      />
    </a>
  </li>
</ul>
`;

exports[`renders correctly with Sport Relief links 1`] = `
.c2 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: block;
  position: relative;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c2:hover,
.c2:focus {
  opacity: 0.6;
}

.c3 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin: 0 auto 0 0;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 32px;
  margin-right: 1.5rem;
}

@media (min-width:740px) {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: start;
    -ms-flex-pack: start;
    justify-content: start;
    margin: 0 auto 0 0;
  }
}

@media (min-width:740px) {
  .c1 {
    width: 48px;
  }
}

<ul
  className="c0"
>
  <li
    className="c1"
  >
    <a
      className="c2"
      data-test="icon-facebook"
      href="https://www.facebook.com/sportrelief"
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our Facebook page"
    >
      <img
        alt="facebook"
        className="c3"
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
  >
    <a
      className="c2"
      data-test="icon-instagram"
      href="https://www.instagram.com/sportrelief"
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our Instagram account"
    >
      <img
        alt="instagram"
        className="c3"
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
  >
    <a
      className="c2"
      data-test="icon-twitter"
      href="https://twitter.com/sportrelief"
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our Twitter account"
    >
      <img
        alt="twitter"
        className="c3"
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
  >
    <a
      className="c2"
      data-test="icon-youtube"
      href="https://www.youtube.com/channel/UCdF5u0ggeSETozc8fsprjcw"
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our YouTube channel"
    >
      <img
        alt="youtube"
        className="c3"
        src="mock.asset"
      />
    </a>
  </li>
</ul>
`;
